Make sure the edit button is visible when the side panels are hidden.

--- a/nlw/share/sass/wiki.sass
+++ b/nlw/share/sass/wiki.sass
@@ -195,7 +195,7 @@
 
 #st-page-boxes-show-link, #st-page-boxes-hide-link
   position: absolute
-  right: 5px
+  right: $margin
   top: 8px
   .arrow
     font-size: 10px
